Swapped margin to padding to avoid margin collapse on chrome

--- a/web/app/themes/mitlib-parent/css/scss/partials/_typography.scss
+++ b/web/app/themes/mitlib-parent/css/scss/partials/_typography.scss
@@ -80,7 +80,7 @@ h6 {
 		line-height: 1.5em;
 
 		ol, ul {
-			margin-top: 8px;
+			padding-top: 8px;
 		}
 	}
 
